--- a/style.css
+++ b/style.css
@@ -34,24 +34,28 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-right: 23px;
+    margin-right: 25px;
+    margin-top: 7px;
 }
 
 .singolo__logo {
     text-decoration: none;
 }
 
-.singolo__logo h1{
+.singolo__logo h1 {
     font-size: 25px;
     color: white;
     text-decoration: none;
+    font-weight: 900;
+    letter-spacing: -0.5px;
 }
 
 .nav__item a {
     font-size: 12px;
     color: white;
     text-decoration: none;
-    padding: 14px;
+    padding: 15px;
+    letter-spacing: -0.1px;
 }
 
 .nav__item a:hover {
@@ -88,18 +92,19 @@ body {
 .slider__item {
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    padding: 54px 76px 65px 75px;
 }
 
 .slider__img--left {
-    width: 179px;
-    height: 180px;
+    width: 240px;
+    height: 483px;
 }
 
 .slider__img--right {
-    width: 179px;
-    height: 100px;
+    width: 484px;
+    height: 240px;
 }
-
 
 .slider__control {
     position: absolute;
@@ -124,7 +129,8 @@ body {
 }
 
 .singolo__services {
-    background: #e6e6e6
+    background: #e6e6e6;
+    padding: 40px;
 }
 
 
