--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap');
 
 * {
     margin: 0;
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     color: #767e9e;
     font-family: 'Lato', sans-serif;
+    cursor: default;
 }
 
 body {
@@ -16,16 +17,18 @@ body {
 .container {
     width: 1020px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .singolo__header {
     background: #2d303a;
+    border-bottom: 6px solid #323746;
 }
 
 .singolo__header > .container {
     display: flex;
     align-items: center;
-    padding: 29px 0px 35px 39px;
+    padding: 29px 0px 30px 39px;
     justify-content: space-between;
 }
 
@@ -48,6 +51,13 @@ body {
     text-decoration: none;
     font-weight: 900;
     letter-spacing: -0.5px;
+    cursor: pointer;
+    position: relative;
+}
+
+.singolo__logo h1::after {
+    content: "*";
+    color: #f06c64;
 }
 
 .nav__item a {
@@ -55,11 +65,28 @@ body {
     color: white;
     text-decoration: none;
     padding: 15px;
-    letter-spacing: -0.1px;
+    letter-spacing: -0.2px;
+    cursor: pointer;
+    font-weight: bold;
 }
 
-.nav__item a:hover {
-    color: #f06c64;
+.nav__item {
+    position: relative;
+}
+
+.nav__item:after {
+    content: "";
+    width: 3px;
+    height: 3px;
+    background: #494e62;
+    position: absolute;
+    left: 0;
+    top: 12px;
+}
+
+
+.nav__item:first-child::after {
+    display: none;
 }
 
 .services__title {
@@ -70,18 +97,54 @@ body {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    margin: 0;
     padding: 0;
+    margin-top: 23px;
+    margin-left: 2px;
 }
 
 .services__item {
-    width: 30%;
+    width: 310px;
 }
 
 .singolo__slider {
     background: #f06c64;
     position: relative;
+    border-bottom: 6px solid #ea676b;
 }
+
+.singolo__slider > .container {
+    position: relative;
+}
+
+.slider__control {
+    content: "";
+    position: absolute;
+    top: 261px;
+    opacity: .7;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    display: block;
+    padding: 18px;
+}
+
+.slider__control img:hover {
+    cursor: pointer;
+}
+
+.slider__control:hover {
+    opacity: 1;
+
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.slider__control--left {
+left: 22px;
+}
+
+
+.slider__control--right {
+    right: 23px;
+    }
 
 .slider__list {
     list-style: none;
@@ -93,7 +156,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 54px 76px 65px 75px;
+    padding: 52px 76px 59px 75px;
 }
 
 .slider__img--left {
@@ -106,15 +169,17 @@ body {
     height: 240px;
 }
 
-.slider__control {
-    position: absolute;
-    width: 100%;
-}
-
-
 .services__item {
     position: relative;
-    padding-left: 60px;
+    padding-left: 80px;
+    margin-right: 9px;
+    margin-bottom: 30px;
+}
+
+.services__item:nth-child(3n) {
+    margin-right: 0;
+    width: 304px;
+    padding-left: 82px;
 }
 
 .services__item figure {
@@ -125,13 +190,63 @@ body {
     border-radius: 50%;
     border: 2px solid;
     text-align: center;
-    padding-top: 11px;
+    padding-top: 13px;
+    margin-top: 2px;
 }
 
 .singolo__services {
     background: #e6e6e6;
-    padding: 40px;
+    padding-top: 59px;
+    padding-bottom: 32px;
+    border-bottom: 6px solid #ffffff;
+}
+
+.services__title {
+    font-size: 30px;
+    margin-left: 2px;
+    font-weight: bold;
+    color: #666d89;
+}
+
+.singolo__services > .container {
+    padding: 0 38px;
+}
+
+.services__description {
+    padding-top: 18px;
+    padding-left: 2px;
+    padding-bottom: 22px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+}
+
+.services__item-title {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.services__item-description {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 21px;
+    padding-top: 7px;
+    display: block;
+    text-align: justify;
 }
 
 
+.nav__link:hover {
+    color: #f06c64;
+    transition: 0.7s;  
+}
 
+.services__list:hover > .services__item {
+    opacity: 0.3s;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;  
+}
+    
+.services__list:hover > .services__item:hover {
+    opacity: 1.0;
+    transform: scale(1.02);  
+  }
