fix: rename files

--- a/singolo1.css
+++ b/singolo1.css
@@ -195,7 +195,7 @@ left: 22px;
 }
 
 .singolo__services {
-    background: #e6e6e6;
+    background: #f2f2f2;
     padding-top: 59px;
     padding-bottom: 32px;
     border-bottom: 6px solid #ffffff;
