--- a/singolo1.css
+++ b/singolo1.css
@@ -49,7 +49,6 @@ body {
     font-size: 25px;
     color: white;
     text-decoration: none;
-    font-weight: 900;
     letter-spacing: -0.5px;
     cursor: pointer;
     position: relative;
@@ -195,7 +194,7 @@ left: 22px;
 }
 
 .singolo__services {
-    background: #e6e6e6;
+    background: #f2f2f2;
     padding-top: 59px;
     padding-bottom: 32px;
     border-bottom: 6px solid #ffffff;
