featt: add styles to portfolio block

--- a/singalo2.css
+++ b/singalo2.css
@@ -16,9 +16,14 @@ body {
 
 .container {
     width: 1020px;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     overflow: hidden;
 }
+
+.singalo__portfolio > .container {
+    padding: 0 38px;
+}
+
 
 .singalo__title {
     font-size: 30px;
@@ -29,14 +34,35 @@ body {
     background: #2d303a;
     color: #666d89;
     padding-top: 60px;
+    padding-bottom: 53px;
 }
 
 .portfolio__description {
-    margin-top: 10px;
+    padding-top: 18px;
+    padding-left: 2px;
+    padding-bottom: 11px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
 }
 
-.singalo__portfolio > .container {
-    padding: 0 38px;
+.filter__items, .filter__item {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.filter__link {
+    font-size: 12px;
+    line-height: 22px;
+    border: 1px solid #666d89;
+    border-radius: 5px;
+    padding: 3px 6.3px;
+    margin-right: 7px;
+    cursor: pointer;
+    letter-spacing: -0.008rem;
+    text-decoration: none;
+    margin-left: 3px;
 }
 
 .portfolio__items {
@@ -46,18 +72,37 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    margin-top: 19px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
+
 .portfolio__item {
     margin: 0;
     padding: 0;
     width: 220px;
     height: 187px;
+    margin-bottom: 20px;
 }
 
-.portfolio__filter {
-    display: flex;
-    margin: 0;
-    padding: 0;
+.portfolio__link img {
+    cursor: pointer;
+
+}
+
+.portfolio__items:hover > .portfolio__item {
+    opacity: 0.7;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.portfolio__items:hover > .portfolio__item:hover {
+    opacity: 1.0;
+
+    transform: scale(1.02);
+}
+
+.portfolio__title {
+    margin-left: 1px;
 }
 
 .portfolio__filter {
@@ -71,15 +116,85 @@ body {
     padding: 0;
 }
 
+.singalo__team > .container {
+    padding: 0 38px;
+}
+
+.singalo__team {
+    background: #f2f2f2;
+    color: #767e9e;
+    padding-top: 60px;
+    padding-bottom: 53px;
+}
+
+.team__description {
+    padding-top: 18px;
+    padding-left: 2px;
+    padding-bottom: 44px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+    text-align: justify;
+}
+
 .team__items {
     display: flex;
+    justify-content: space-between;
 }
 
 .team__item {
     display: flex;
     flex-direction: column;
+    width: 300px;
+    justify-content: space-between;
 }
 
-.team__links {
+.team__name {
+    font-size: 18px;
+    font-weight: 900;
+    margin-top: 15px;
+    margin-bottom: 8px;
+}
+
+.team__info {
+    font-size: 12px;
+    line-height: 21px;
+    margin-bottom: 25px;
+    text-align: justify;
+}
+
+.social__list {
     display: flex;
+    justify-content: flex-start;
+}
+
+.social__item {
+    position: relative;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding: 14px;
+    border: 1px solid #767e9e;
+    border-radius: 50%;
+    margin: 0 6px 0 4px;
+}
+
+.social__link img {
+    height: 15px;
+    position: absolute;
+    left: 10px;
+    top: 7px;
+}
+
+.social__item--g .social__link img {
+    left: 7px;
+}
+
+.social__item--tw .social__link img {
+    left: 6px;
+    height: 13px;
+}
+
+.social__item--in .social__link img {
+    left: 7px;
 }
