--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     color: #767e9e;
     font-family: 'Lato', sans-serif;
     cursor: default;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,6 +24,10 @@ body {
 .singolo__header {
     background: #2d303a;
     border-bottom: 6px solid #323746;
+    position: sticky;
+    top: 0;
+    z-index: 3;
+
 }
 
 .singolo__header > .container {
@@ -159,9 +164,61 @@ body {
 }
 
 .slider__img--left {
-    width: 240px;
+
     height: 483px;
 }
+
+.img-wrapper {
+    position: relative;
+}
+
+.btn__phone {
+    content: "";
+    width: 43px;
+    height: 43px;
+    border-radius: 50px;
+    background: #ff000000;
+    z-index: 4;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+}
+
+.lcd__phone {
+    position: absolute;
+    width: 189px;
+    z-index: 4;
+    height: 334px;
+    background: black;
+    border-radius: 4px;
+}
+
+.btn__phone--left {
+
+    bottom: 37px;
+    left: 87px;
+}
+
+.btn__phone--right {
+    left: 7px;
+    top: 88px;
+}
+
+.lcd__phone--left {
+    bottom: 88px;
+    left: 14px;
+    display: none;
+}
+
+.lcd__phone--right {
+    left: 60px;
+    top: 13px;
+    width: 334px;
+    height: 189px;
+    display: none;
+
+} 
+
 
 .slider__img--right {
     width: 484px;
@@ -242,6 +299,11 @@ body {
 .nav__link:hover {
     color: #f06c64;
     transition: 0.7s;
+}
+
+.nav__link.nav__link--active {
+    color: #f06c64;
+    transition: 0.7s; 
 }
 
 .services__list:hover > .services__item {
@@ -332,8 +394,11 @@ body {
     width: 220px;
     height: 187px;
     margin-bottom: 20px;
+    display: none;
 }
-
+.show {
+    display: block;
+  }
 .portfolio__item:nth-child(n+13) {
     display: none;
 }
@@ -727,4 +792,35 @@ textarea {
 
 
 
+.modal {
+    display: none;
+    width: 600px;
+    position: fixed;
+    z-index: 5;
+    background: white;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+    /* text-align: center; */
+    left: calc(50% - 300px);
+    top: 50px;
+    padding: 26px;
+}
 
+.close {
+    /* width: 20px; */
+    /* height: 20px; */
+    background: red;
+    border: none;
+    color: black;
+    cursor: pointer;
+    font-size: 27px;
+    padding: 2px 9px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.portfolio__img.portfolio__img--border {
+    outline: 3px solid red;
+}
