--- a/style.css
+++ b/style.css
@@ -109,15 +109,64 @@ body {
 .services__item {
     width: 310px;
 }
+/* 
 
-.singolo__slider {
-    background: #f06c64;
+
+
+
+ */
+
+.slider {
     position: relative;
+    margin: 0 auto;
+    width: 1020px;
+    height: 600px;
+    
+}
+.wrapper {
+    overflow: hidden;
+    position: relative;
+    width: 1020px;
+    height: 600px;
+    z-index: 1;
+}
+.slides {
+    display: flex;
+    position: relative;
+    top: 0;
+    left: -1020px;
+    width: 10000px;
+}
+.slides.shifting {
+    transition: left 0.2s ease-out;
+}
+.slide {
+    width: 1020px;
+    height: 600px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 1s;
+    position: relative;
+    background: #f06c64;
     border-bottom: 6px solid #ea676b;
+    border-radius: 2px;
+    padding: 43px 111px;
 }
 
-.singolo__slider > .container {
-    position: relative;
+.slide-blue {
+    background: #6493f0;
+    border-bottom: 6px solid #233863;   
+}
+
+.slide-blue > .container {
+    padding-left: 143px;
+}   
+
+.slide > .container {
+    display: flex;
+    align-items: center;
 }
 
 .slider__control {
@@ -128,6 +177,7 @@ body {
     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
     display: block;
     padding: 18px;
+    z-index: 5;
 }
 
 .slider__control img:hover {
@@ -150,18 +200,7 @@ body {
     right: 23px;
 }
 
-.slider__list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 
-.slider__item {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 52px 75px 59px 75px;
-}
 
 .slider__img--left {
 
@@ -171,6 +210,13 @@ body {
 .img-wrapper {
     position: relative;
 }
+.slider__img--right {
+    width: 484px;
+    height: 240px;
+    margin-left: 74px;
+}
+
+
 
 .btn__phone {
     content: "";
@@ -200,7 +246,7 @@ body {
 }
 
 .btn__phone--right {
-    left: 7px;
+    left: 83px;
     top: 88px;
 }
 
@@ -211,7 +257,7 @@ body {
 }
 
 .lcd__phone--right {
-    left: 60px;
+    left: 134px;
     top: 13px;
     width: 334px;
     height: 189px;
@@ -220,10 +266,7 @@ body {
 } 
 
 
-.slider__img--right {
-    width: 484px;
-    height: 240px;
-}
+/*  */
 
 .services__item {
     position: relative;
