--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-    width: 1020px;
+    max-width: 1020px;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -120,15 +120,14 @@ body {
 .slider {
     position: relative;
     margin: 0 auto;
-    width: 1020px;
+    width: 100%;
+    max-width: 1020px;
     height: 600px;
     
 }
 .wrapper {
     overflow: hidden;
     position: relative;
-    width: 1020px;
-    height: 600px;
     z-index: 1;
 }
 .slides {
@@ -142,7 +141,7 @@ body {
     transition: left 0.2s ease-out;
 }
 .slide {
-    width: 1020px;
+    max-width: 1020px;
     height: 600px;
     cursor: pointer;
     display: flex;
@@ -153,7 +152,6 @@ body {
     background: #f06c64;
     border-bottom: 6px solid #ea676b;
     border-radius: 2px;
-    padding: 43px 111px;
 }
 
 .slide-blue {
@@ -162,12 +160,14 @@ body {
 }
 
 .slide-blue > .container {
-    padding-left: 143px;
-}   
+    padding-left: calc(510px - 243px) !important;
+} 
 
 .slide > .container {
     display: flex;
     align-items: center;
+    width: 1020px;
+    padding: 0 111px;
 }
 
 .slider__control {
@@ -274,7 +274,7 @@ body {
     padding-left: 80px;
     padding-right: 10px;
     margin-right: 9px;
-    margin-bottom: 27px;
+    margin-bottom: 33px;
 }
 
 .services__item:nth-child(3n) {
@@ -298,7 +298,7 @@ body {
 .singolo__services {
     background: #f2f2f2;
     padding-top: 59px;
-    padding-bottom: 33px;
+    padding-bottom: 24px;
     border-bottom: 6px solid #ffffff;
 }
 
@@ -384,7 +384,7 @@ body {
 .portfolio__description {
     padding-top: 17px;
     padding-left: 2px;
-    padding-bottom: 10px;
+    padding-bottom: 12px;
     font-size: 18px;
     font-weight: 300;
     line-height: 30px;
@@ -881,4 +881,88 @@ textarea {
 
 .portfolio__img.portfolio__img--border {
     outline: 3px solid red;
+}
+
+@media (max-width: 1020px) {
+    .slide > .container {
+        max-width: 1020px;
+    }
+
+    .services__list {
+        justify-content: space-around;
+    }
+
+    .services__item:nth-child(3n) {
+        padding-left: 80px;
+        margin-right: 9px;
+    }
+
+    .copyright__text {
+        display: none;
+    }
+
+    .singalo__footer > .container {
+        justify-content: center;
+    }
+
+    .right-column {
+        width: 309px;
+        margin-top: 25px;
+    }
+
+    .feedack > .container {
+        padding-left: 39px;
+        padding-right: 9px;
+    }
+}
+
+@media (max-width: 900px) {
+    .slider {
+        width: 900px;
+    }
+    
+    .slides {
+        left: -900px;
+    }
+
+    .slide > .container {
+        width: 900px;
+    }
+}
+
+
+@media (max-width: 820px) {
+    .slider {
+        width: 820px;
+    }
+    
+    .slides {
+        left: -820px;
+    }
+
+    .slide > .container {
+        width: 820px;
+    }
+}
+
+@media (max-width: 768px) {
+    .slider {
+        width: 768px;
+    }
+    
+    .slides {
+        left: -768px;
+    }
+
+    .slide > .container {
+        width: 768px;
+    }
+    
+    .left-column {
+        width: 511px;
+    }
+
+    .nav__list {
+        margin-top: 1px;
+    }
 }
