--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 
 .container {
     max-width: 1020px;
-    min-width: 350px;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -27,8 +26,7 @@ body {
     border-bottom: 6px solid #323746;
     position: sticky;
     top: 0;
-    z-index: 3;
-
+    z-index: 6;
 }
 
 .singolo__header > .container {
@@ -407,12 +405,17 @@ body {
     padding-right: 2px;
 }
 
+.portfolio__item:nth-child(4n) {
+    margin-right: 0;
+}
+
 .portfolio__item {
     margin: 0;
     padding: 0;
     width: 220px;
     height: 187px;
     margin-bottom: 20px;
+    margin-right: 20px;
     overflow: hidden;
 }
 
@@ -777,18 +780,6 @@ textarea {
     margin-left: -3px;
 }
 
-.social__item {
-    position: relative;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    padding: 15px;
-    border: 1px solid #767e9e;
-    border-radius: 50%;
-    margin: 0px 4px 0 4px;
-    cursor: pointer;
-    opacity: .7;
-}
 .social__item img {
     cursor: pointer;
 }
@@ -801,25 +792,39 @@ textarea {
 .social__link img {
     height: 14px;
     position: absolute;
-    left: 11px;
+    left: 0;
     top: 7px;
 }
 
 .social__item--g .social__link img {
-    left: 8px;
+    left: 2px;
 }
 
 .social__item--tw .social__link img {
-    left: 8px;
+    left: 2px;
     height: 12px;
     top: 8px;
 }
 
 .social__item--in .social__link img {
+    left: 2px;
+}
+
+.copyright__social > .social__item--g .social__link img {
     left: 8px;
 }
 
+.copyright__social > .social__item--tw .social__link img {
+    left: 8px;
+}
 
+.copyright__social > .social__item--in .social__link img {
+    left: 8px;
+}
+
+.copyright__social > .social__item--fb .social__link img {
+    left: 8px;
+}
 
 .modal {
     display: none;
@@ -830,15 +835,12 @@ textarea {
     margin-right: auto;
     margin-left: auto;
     justify-content: center;
-    /* text-align: center; */
     left: calc(50% - 300px);
     top: 50px;
     padding: 26px;
 }
 
 .close {
-    /* width: 20px; */
-    /* height: 20px; */
     background: red;
     border: none;
     color: black;
@@ -864,7 +866,33 @@ textarea {
 }
 
 .portfolio__img.portfolio__img--border {
-    outline: 3px solid red;
+    outline: 5px solid #F06C64 ;
+    outline-offset: -5px;
+}
+
+.hamburgerrr {
+    width: 24px;
+    height: 21px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    position: absolute;
+    z-index: 3;
+    left: 22px;
+    top: 27px;
+    transition: 0.3s ease-out;
+  }
+  
+  .hamburgerrr .line {
+    width: 100%;
+    height: 3px;
+    border-radius: 10px;
+    background: #fff;
+  }
+  
+  .hamburgerrr-rotate {
+    transform: rotate(90deg);
 }
 
 @media (max-width: 1020px) {
@@ -879,6 +907,8 @@ textarea {
     .services__item:nth-child(3n) {
         padding-left: 80px;
         margin-right: 0;
+        width: 310px;
+        margin-right: 9px;
     }
 
     .copyright__text {
@@ -901,10 +931,20 @@ textarea {
 }
 
 @media (max-width: 1019px) {
-    .services__item:nth-child(3n) {
-        margin-right: 15px;
+    .portfolio__item:nth-child(4n) {
+        margin-right: 20px;
+    }
+
+    .portfolio__items {
+        justify-content: space-around;
+    }
+
+    .team__item {
+        width: 32%;
     }
 }
+
+
 
 
 @media (max-width: 900px) {
@@ -918,6 +958,40 @@ textarea {
 
     .slider__item .container {
         width: 643px;
+    }
+
+    .lcd__phone--right {
+        width: 288px;
+        height: 164px;
+        left: 52px;
+        top: 12px;
+    }
+
+    .lcd__phone--left {
+        width: 164px;
+        height: 290px;
+        left: 12px;
+        top: 56px;
+    }
+
+    .btn__phone--right {
+        width: 37px;
+        height: 37px;
+        top: 74px;
+    }
+
+    .btn__phone--left {
+        width: 37px;
+        height: 37px;
+        left: 75px;
+        bottom: 32px;
+    }
+    
+}
+
+@media (max-width: 799px) {
+    .portfolio__item:nth-child(n+9) {
+        display: none;
     }
 }
 
@@ -971,16 +1045,12 @@ textarea {
     }
 
     .portfolio__item {
+        width: 216px;
         margin-bottom: 16px;
-        width: 218px;
     }
-
+    
     .singalo__team {
         padding-top: 54px;
-    }
-
-    .team__item {
-        width: 221px;
     }
 
     .team__item:nth-child(2) {
@@ -997,7 +1067,7 @@ textarea {
     }
 
     .singalo__team {
-        padding-bottom: 59px;
+        padding-bottom: 0;
     }
 
     .feedack {
@@ -1040,8 +1110,62 @@ textarea {
     .slider__control {
         top: 169px;
     }
+
+    a.portfolio__link {
+        background-size: cover;
+    }
+
+    .portfolio__link img {
+        width: 100%;
+    }
+    .lcd__phone--right {
+        width: 252px;
+        height: 143px;
+        left: 45px;
+        top: 10px;
+    }
+
+    .lcd__phone--left {
+        width: 143px;
+        height: 252px;
+        left: 10px;
+        top: 49px;
+    }
+
+    .btn__phone--right {
+        width: 33px;
+        height: 33px;
+        top: 65px;
+    }
+
+    .btn__phone--left {
+        width: 33px;
+        height: 33px;
+        left: 65px;
+        bottom: 27px;
+    }
+
 }
 
+@media (max-width: 761px) {
+
+    .portfolio__items {
+        justify-content: space-around;
+    }
+
+
+}
+
+@media (max-width: 733px) {
+    .services__item {
+        width: 100%;
+        margin-bottom: 25px;
+    }
+
+    .services__item:nth-child(3n) {
+        width: 100%;
+    }
+}
 
 @media (max-width: 660px) {
 
@@ -1061,14 +1185,49 @@ textarea {
         width: 299px;
     }
 
+    .hamburgerrr {
+        display: flex;
+
+    }
+
     .nav__list {
-        display: none;
+        position: absolute;
+        flex-direction: column;
+        background: #053f5a;
+        left: -80vw;
+        top: 0;
+        width: 80vw;
+        height: 100vh;
+        padding-top: 34vw;
+        padding-left: 56px;
+        transition: 0.3s ease-out;
+        opacity: 0.95;
+    }
+
+    .menu-show {
+        left: 0;
+    }
+
+    .nav__item {
+        margin-bottom: 28px;
+    }
+
+    .nav__item:after {
+        width: 0;
+        height: 0;
+    }
+
+
+    .nav__item a {
+        font-size: 24px;
     }
 
     .singolo__header > .container {
         padding: 22px 0px 19px 39px;
+        justify-content: center;
     }
 
+    
     .slider__control {
         top: 140px;
     }
@@ -1085,30 +1244,177 @@ textarea {
         font-size: 20px;
     }
 
+    .lcd__phone--right {
+        width: 206px;
+        height: 117px;
+        left: 37px;
+        top: 9px;
+    }
+
+    .lcd__phone--left {
+        width: 117px;
+        height: 207px;
+        left: 8px;
+        top: 40px;
+    }
+
+    .btn__phone--right {
+        width: 29px;
+        height: 29px;
+        top: 52px;
+        left: 4px;
+    }
+
+    .btn__phone--left {
+        width: 29px;
+        height: 29px;
+        left: 52px;
+        bottom: 22px;
+    }
+
+
+
 }
 
+@media (max-width: 610px) {
+    .feedback__columns {
+        flex-direction: column;
+    }
 
+    .left-column {
+        width: 84vw;
+    }
 
-@media (max-width: 546px) {
+    .right-column {
+        width: 84vw;
+        padding-left: 0;
+    }
+
+    
+    .team__items {
+        flex-direction: column;
+        align-items: center;
+    }   
+
+     .team__item {
+        width: 315px;
+        margin-bottom: 34px;
+    } 
+}
+
+@media (max-width: 552px) {
 
     .slider__item {
         height: 300px;
     }
 
     .slider__item .container {
-        width: 359px;
+        width: 323px;
+        padding-top: 7px;
     }
 
     .slider__img--left {
-        height: 175px;
+        height: 179px;
     }
 
     .slider__img--right {
-        width: 175px;
+        width: 179px;
     }
 
     .slider__control {
         top: 120px;
+    }
+
+    .singolo__services > .container {
+        padding: 0px 30px;
+    }
+
+    .singolo__services {
+        padding-top: 26px;
+    }
+
+    .team__description {
+        padding-bottom: 23px;
+    }
+
+    .team__name {
+        margin-top: 16px;
+    }
+
+    .nav__list {
+        padding-top: 62vw;
+    }
+    
+
+    .services__description {
+        padding-bottom: 6px;
+    }
+
+    .feedack {
+        padding-top: 41px;
+    }
+    .portfolio__item:nth-child(2n) {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .portfolio__items {
+        margin-top: 25px;
+        justify-content: space-between;
+    }
+
+    .singalo__portfolio {
+        padding-bottom: 22px;
+    }
+
+    .portfolio__item {
+        height: inherit;
+        margin-bottom: 11px;
+        margin-right: 0;
+    }
+
+    .singalo__team {
+        padding-top: 34px;
+    }
+
+    .singalo__team > .container {
+        padding: 0px 28px;
+    }
+
+    .lcd__phone--right {
+        width: 124px;
+        height: 70px;
+        left: 22px;
+        top: 5px;
+    }
+
+    .lcd__phone--left {
+        width: 70px;
+        height: 124px;
+        left: 5px;
+        top: 24px;
+    }
+
+    .btn__phone--right {
+        width: 18px;
+        height: 18px;
+        top: 31px;
+        left: 2px;
+    }
+
+    .btn__phone--left {
+        width: 18px;
+        height: 18px;
+        left: 31px;
+        bottom: 14px;
+    }
+    
+}
+
+
+@media (max-width: 553px) {
+    .portfolio__item {
+        width: 158px;
     }
 }
 
@@ -1119,6 +1425,26 @@ textarea {
 
 .slider__control {
     top: 72px;
+}
+
+.singolo__services {
+    padding-bottom: 0;
+}
+
+.singalo__portfolio {
+    padding-top: 40px;
+}
+
+.singalo__portfolio > .container {
+    padding: 0 28px;
+}
+
+.portfolio__description {
+    padding-bottom: 18px;
+}
+
+.portfolio__item {
+    width: 150px;
 }
 
 }
